# Rock-paper-Scissors

./: CMakeLists.txt  jugador.cpp  jugador.h  jugador1.cpp  jugador1.h  jugadorIA.cpp  jugadorIA.h  main.cpp  partida.cpp  partida.h  partidasheldon.cpp  partidasheldon.h
